# polipy4vasp_public

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  intro.rst  modules.rst  polipy4vasp.rst
examples/: ML_TEN  Scatter.npy  TEN_ML_FF  learn.py  predict.py  ten_learn.py  time.txt
examples/POS/: POSCAR1  POSCAR10  POSCAR11  POSCAR12  POSCAR13  POSCAR14  POSCAR15  POSCAR16  POSCAR17  POSCAR18  POSCAR19  POSCAR2  POSCAR20  POSCAR21  POSCAR22  POSCAR23  POSCAR24  POSCAR25  POSCAR26  POSCAR27  POSCAR28  POSCAR29  POSCAR3  POSCAR30  POSCAR31  POSCAR32  POSCAR33  POSCAR34  POSCAR35  POSCAR36  POSCAR37  POSCAR38  POSCAR39  POSCAR4  POSCAR40  POSCAR41  POSCAR42  POSCAR43  POSCAR44  POSCAR45  (+13 more)
examples/Si_cd_100K-300K/: ML_AB
examples/ZrO2_Ten/: TEN_ML_AB  make_TEN_ML_AB.py
examples/ZrO2_Ten/POS/: POSCAR  POSCAR.10  POSCAR.100  POSCAR.101  POSCAR.102  POSCAR.103  POSCAR.104  POSCAR.105  POSCAR.106  POSCAR.107  POSCAR.108  POSCAR.109  POSCAR.11  POSCAR.110  POSCAR.111  POSCAR.112  POSCAR.113  POSCAR.114  POSCAR.115  POSCAR.116  POSCAR.117  POSCAR.118  POSCAR.119  POSCAR.12  POSCAR.13  POSCAR.14  POSCAR.15  POSCAR.16  POSCAR.17  POSCAR.18  POSCAR.19  POSCAR.2  POSCAR.20  POSCAR.21  POSCAR.22  POSCAR.23  POSCAR.24  POSCAR.25  (+81 more)
polipy4vasp/: LR_descriptors.py  ML_AB_reader.py  POSCAR_reader.py  TEN_ML_AB_reader.py  XDATCAR_reader.py  __init__.py  console_output.py  descriptors.py  desing.py  globals.py  kernel.py  main.py  make_linear_fast.py  positions.py  preprocess.py  rad_basis_funcs.py  reference.py  sph.py  splines.py  splines_new.py  tensor_classes.py  tensor_descriptors.py  train.py
polipy4vasp/asa/: asa.f90
polipy4vasp/tests/: old_force_rot.py  old_test_forces.py  old_test_spheric_harmonics.py  old_test_splines.py  ten_test.py  test_NNL.py  test_all_forces.py  test_descriptors.py  test_kernel.py  test_positions.py  test_utils.py
(+3 files in other folders)
