[metadata]
name = polipy4vasp
version = 0.1.0
author = Bernhard Schmiedmayer, Carolin Faller
description = Description of polipy4vasp
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Programming Language :: Fortran
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6.2
packages = find:
zip_safe = False
install_requires =
  numpy == 1.23.1
  scipy >= 1.3.3
  dataclasses
  tqdm
  joblib
  matplotlib

[options.packages.find]
#where=polipy4vasp # not needed since April! Reason: no idea!!

[options.extras_require]
tests =
  pytest
  pytest-cov
  importlib_resources
  black
docs =
  sphinx
  sphinx-rtd-theme
  pydocstyle

##############################################################################
# F2PY compiler options
##############################################################################
# f2py will automatically use a C/Fortran compiler installed on your system
# without any further configuration necessary. However, if you like to switch
# to a different compiler or change compile options you can set them here.
#
# 1.) First find out which compilers are available by running:
#
# f2py -c --help-fcompiler
#
# The output will also show the compile options used by default.
#
# 2.) Select the desired compiler and options via the items "compiler",
# "fcompiler" and "opt" in sections [build_ext] and [config_fc] below. More info can be found here:
#
# https://numpy.org/doc/stable/f2py/distutils.html
#
# If something goes wrong, check the output of
#
# pip setup.py build_ext
#
# for compilation warnings and errors.

[build_ext]
#compiler=intelem
#fcompiler=intelem

[config_fc]
#fcompiler=intelem
#opt=-O3 -fp-model strict -assume minus0 -qopenmp
